header section completed

--- a/index.html
+++ b/index.html
@@ -22,24 +22,67 @@
             </ul>
         </nav>
 
-        <div>
+        <div class="header-div">
 
-            <div>
+            <div class="h-d-1">
                 <h2>Start your Journey as Influencer</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
                 <button>Prebook now -></button>
                                         
 
             </div>
 
-            <div>
+            <div class="banner-img">
                 <img class="b-i-c" src="images/Circle design.svg" alt="">
 
-                <img src="images/main-camera.png" alt="">
+                <img class="b-i-camera" src="images/main-camera.png" alt="">
 
             </div>
 
-       </div> 
+       </div>
+       <div class="sp-img">
+                <div><img src="logos/Alibaba.svg" alt="" class="sponsor-img">
+                </div>
+                <div><img src="logos/Amazon.svg" alt="" class="sponsor-img">
+                </div>
+                <div><img src="logos/Daraz.pk Logo.svg" alt="" class="sponsor-img">
+                </div>
+                <div><img src="logos/Ebay.svg" alt="" class="sponsor-img">
+                </div>
+                <div><img src="logos/Rakuten.svg" alt="" class="sponsor-img">
+                </div>
+                <div><img src="logos/Target.svg" alt="" class="sponsor-img">
+                </div>
+                <div><img src="logos/Walmart.svg" alt="" class="sponsor-img">
+                </div>
+            </div> 
     </header>
+
+
+    <main>
+        <section>
+            <div><h3>Popular Collection</h3></div>
+            <div>
+                <div>
+                    <img src="images/tripod.png" alt="">
+                    <p>$50.48</p>
+                    <div>
+                        <div>
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/halstarf.png" alt="">
+                        </div>
+                        <p>4.99</p>
+                    </div>
+                    <p>Worldwide Shifting</p>
+                    <p>available</p>
+                    <p>Buyers protection possible!</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
