--- a/index.html
+++ b/index.html
@@ -61,24 +61,79 @@
 
     <main>
         <section>
-            <div><h3>Popular Collection</h3></div>
-            <div>
-                <div>
-                    <img src="images/tripod.png" alt="">
-                    <p>$50.48</p>
-                    <div>
+            <div class="headline"><h3>Popular Collection</h3></div>
+            <div class="item-container">
+                <div class="item-cards">
+                    <img class="item-img" src="images/tripod.png" alt="">
+                    <h3 class="item-name">Flex Tripod</h3>
+                    <p class="item-rate">$50.48</p>
+                    <div class="ratings">
                         <div>
                             <img src="images/fullstar.png" alt="">
                             <img src="images/fullstar.png" alt="">
                             <img src="images/fullstar.png" alt="">
                             <img src="images/fullstar.png" alt="">
-                            <img src="images/halstarf.png" alt="">
+                            <img src="images/halfstar.png" alt="">
                         </div>
                         <p>4.99</p>
                     </div>
-                    <p>Worldwide Shifting</p>
-                    <p>available</p>
-                    <p>Buyers protection possible!</p>
+                    <p class="info">Worldwide Shifting</p>
+                    <p class="info">available</p>
+                    <p class="info">Buyers protection possible!</p>
+                </div>
+                <div class="item-cards">
+                    <img class="item-img" src="images/tripod.png" alt="">
+                    <h3 class="item-name">Flex Tripod</h3>
+                    <p class="item-rate">$50.48</p>
+                    <div class="ratings">
+                        <div>
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/halfstar.png" alt="">
+                        </div>
+                        <p>4.99</p>
+                    </div>
+                    <p class="info">Worldwide Shifting</p>
+                    <p class="info">available</p>
+                    <p class="info">Buyers protection possible!</p>
+                </div>
+                <div class="item-cards">
+                    <img class="item-img" src="images/tripod.png" alt="">
+                    <h3 class="item-name">Flex Tripod</h3>
+                    <p class="item-rate">$50.48</p>
+                    <div class="ratings">
+                        <div>
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/halfstar.png" alt="">
+                        </div>
+                        <p>4.99</p>
+                    </div>
+                    <p class="info">Worldwide Shifting</p>
+                    <p class="info">available</p>
+                    <p class="info">Buyers protection possible!</p>
+                </div>
+                <div class="item-cards">
+                    <img class="item-img" src="images/tripod.png" alt="">
+                    <h3 class="item-name">Flex Tripod</h3>
+                    <p class="item-rate">$50.48</p>
+                    <div class="ratings">
+                        <div>
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/fullstar.png" alt="">
+                            <img src="images/halfstar.png" alt="">
+                        </div>
+                        <p>4.99</p>
+                    </div>
+                    <p class="info">Worldwide Shifting</p>
+                    <p class="info">available</p>
+                    <p class="info">Buyers protection possible!</p>
                 </div>
             </div>
         </section>
