--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header-div">
 
             <div class="h-d-1">
-                <h2>Start your Journey as Influencer</h2>
+                <h2 class="header-text-1">Start your Journey as Influencer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
                 <button>Prebook now -></button>
                                         
@@ -60,7 +60,7 @@
 
 
     <main>
-        <section>
+        <section class="item-section">
             <div class="headline"><h3>Popular Collection</h3></div>
             <div class="item-container">
                 <div class="item-cards">
@@ -117,27 +117,158 @@
                     <p class="info">available</p>
                     <p class="info">Buyers protection possible!</p>
                 </div>
+            
                 <div class="item-cards">
-                    <img class="item-img" src="images/tripod.png" alt="">
-                    <h3 class="item-name">Flex Tripod</h3>
-                    <p class="item-rate">$50.48</p>
-                    <div class="ratings">
-                        <div>
-                            <img src="images/fullstar.png" alt="">
-                            <img src="images/fullstar.png" alt="">
-                            <img src="images/fullstar.png" alt="">
-                            <img src="images/fullstar.png" alt="">
-                            <img src="images/halfstar.png" alt="">
-                        </div>
-                        <p>4.99</p>
+                <img class="item-img" src="images/tripod.png" alt="">
+                <h3 class="item-name">Flex Tripod</h3>
+                <p class="item-rate">$50.48</p>
+                <div class="ratings">
+                    <div>
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/halfstar.png" alt="">
                     </div>
-                    <p class="info">Worldwide Shifting</p>
-                    <p class="info">available</p>
-                    <p class="info">Buyers protection possible!</p>
+                    <p>4.99</p>
+                </div>
+                <p class="info">Worldwide Shifting</p>
+                <p class="info">available</p>
+                <p class="info">Buyers protection possible!</p>
+                </div>
+
+                <div class="item-cards">
+                <img class="item-img" src="images/tripod.png" alt="">
+                <h3 class="item-name">Flex Tripod</h3>
+                <p class="item-rate">$50.48</p>
+                <div class="ratings">
+                    <div>
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/halfstar.png" alt="">
+                    </div>
+                    <p>4.99</p>
+                </div>
+                <p class="info">Worldwide Shifting</p>
+                <p class="info">available</p>
+                <p class="info">Buyers protection possible!</p>
+                </div>
+
+                <div class="item-cards">
+                <img class="item-img" src="images/tripod.png" alt="">
+                <h3 class="item-name">Flex Tripod</h3>
+                <p class="item-rate">$50.48</p>
+                <div class="ratings">
+                    <div>
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/halfstar.png" alt="">
+                    </div>
+                    <p>4.99</p>
+                </div>
+                <p class="info">Worldwide Shifting</p>
+                <p class="info">available</p>
+                <p class="info">Buyers protection possible!</p>
+                </div>
+
+                <div class="item-cards">
+                <img class="item-img" src="images/tripod.png" alt="">
+                <h3 class="item-name">Flex Tripod</h3>
+                <p class="item-rate">$50.48</p>
+                <div class="ratings">
+                    <div>
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/halfstar.png" alt="">
+                    </div>
+                    <p>4.99</p>
+                </div>
+                <p class="info">Worldwide Shifting</p>
+                <p class="info">available</p>
+                <p class="info">Buyers protection possible!</p>
+                </div>
+
+                <div class="item-cards">
+                <img class="item-img" src="images/tripod.png" alt="">
+                <h3 class="item-name">Flex Tripod</h3>
+                <p class="item-rate">$50.48</p>
+                <div class="ratings">
+                    <div>
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/halfstar.png" alt="">
+                    </div>
+                    <p>4.99</p>
+                </div>
+                <p class="info">Worldwide Shifting</p>
+                <p class="info">available</p>
+                <p class="info">Buyers protection possible!</p>
+                </div>
+
+                <div class="item-cards">
+                <img class="item-img" src="images/tripod.png" alt="">
+                <h3 class="item-name">Flex Tripod</h3>
+                <p class="item-rate">$50.48</p>
+                <div class="ratings">
+                    <div>
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/fullstar.png" alt="">
+                        <img src="images/halfstar.png" alt="">
+                    </div>
+                    <p>4.99</p>
+                </div>
+                <p class="info">Worldwide Shifting</p>
+                <p class="info">available</p>
+                <p class="info">Buyers protection possible!</p>
                 </div>
             </div>
+            <p class="see-more">See More -></p>
         </section>
+
+
+        <section class="gear-section">
+            <div>
+                <img src="images/gear.png" alt="">
+            </div>
+
+
+            <div>
+                <h2>Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+                <button>Join Now -></button>
+            </div>
+        </section>
+
+
+
     </main>
+
+        <footer class="footer-part">
+            <section class="footer-section">
+            <div class="footer-div">
+                <h3>Influencer products</h3>
+                <h4>Copyright © 2020  influencer products</h4>
+                <h4>All rights reserved</h4>
+            </div>
+
+            <div>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-youtube"></i>
+                <i class="fa-brands fa-facebook"></i>
+            </div>
+            </section>
+        </footer>
 </body>
 
 </html>
